[workspace.package]
authors = [ 
    "FL03 <jo3mccain@icloud.com> (https://github.com/FL03)", 
    "Scattered-Systems <support@scsys.io> (https://github.com/scattered-systems)" 
]
categories = [  ]
description = "scsys is a collection of primitives and utilities for use throughout the ecosystem."
edition = "2024"
homepage = "https://github.com/scattered-systems/scsys/wiki"
keywords = [ "primitives", "scsys", "toolkit", "utilities" ]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/scattered-systems/scsys.git"
version = "0.2.5"

[workspace]
default-members = [
    "scsys",
]

exclude = [  ]

members = [
    "core",
    "derive",
    "macros",
    "scsys",
    "utils",
]

resolver = "3"

[workspace.dependencies]
scsys = { default-features = false, path = "scsys", version = "0.2.5" }
scsys-core = { default-features = false, path = "core", version = "0.2.5" }
scsys-derive = { default-features = false, path = "derive", version = "0.2.5" }
scsys-macros = { default-features = false, path = "macros", version = "0.2.5" }
scsys-util = { default-features = false, path = "utils", version = "0.2.5" }

# data & serialization
serde = { default-features = false, features = [ "derive" ], version = "1" }
serde_derive = { version = "1" }
serde_json = { default-features = false, version = "1" }
# error handling
anyhow = { default-features = false, version = "1" }
thiserror = { default-features = false, version = "2" }
# math
num = { default-features = false, version = "0.4" }
num-complex = { default-features = false, version = "0.4" }
num-traits = { default-features = false, version = "0.2" }
# randomization
getrandom = { default-features = false, version = "0.3" }
rand = { default-features = false, version = "0.9" }
rand_distr = { default-features = false, version = "0.5" }
uuid = { default-features = false, version = "1" }
# time
chrono = { default-features = false, version = "0.4" }
time = { default-features = false, version = "0.3" }
# macros
lazy_static = { version = "1" }
paste = { version = "1" }
smart-default = { version = "0.7" }
strum = { default-features = false, features = [ "derive" ], version = "0.27" }
# misc
glob = { default-features = false, version = "0.3" }

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = "abort"
rpath = false

[profile.release]
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
lto = false
opt-level = "z"
overflow-checks = false
panic = "abort"
rpath = false
