[workspace]
default-members = [
    "scsys",
]
resolver = "3"
members = [
    "core",
    "scsys",
    "config",
    "crypto",
    "derive",
    "macros",
    "traits",
    "utils", 
]

[workspace.package]
authors = [ 
    "FL03 <jo3mccain@icloud.com> (https://github.com/FL03)", 
    "Scattered-Systems <support@scsys.io> (https://github.com/scattered-systems)" 
]
categories = [  ]
description = "scsys is a collection of primitives and utilities for use throughout the ecosystem."
edition = "2024"
homepage = "https://github.com/scattered-systems/scsys/wiki"
keywords = [ "primitives", "scsys", "toolkit", "utilities" ]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/scattered-systems/scsys.git"
rust-version = "1.85.0"
version = "0.2.9"

[workspace.dependencies]
# sdk
scsys = { default-features = false, path = "scsys", version = "0.2.9" }
scsys-core = { default-features = false, path = "core", version = "0.2.9" }
scsys-config = { default-features = false, path = "config", version = "0.2.9" }
scsys-crypto = { default-features = false, path = "crypto", version = "0.2.9" }
scsys-derive = { default-features = false, path = "derive", version = "0.2.9" }
scsys-macros = { default-features = false, path = "macros", version = "0.2.9" }
scsys-traits = { default-features = false, path = "traits", version = "0.2.9" }
scsys-util = { default-features = false, path = "utils", version = "0.2.9" }

# async
futures = { default-features = false, version = "0.3" }
tokio = { default-features = false, version = "1" }
# benchmarking
criterion = { version = "0.6" }
# concurrency & parallelism
crossbeam = { default-features = false, version = "0.8" }
rayon = { default-features = false, version = "1" }
# data & serialization
bincode = { default-features = false, features = [ "derive" ], version = "2" }
bincode_derive = { version = "2" }
bytes = { default-features = false, version = "1" }
serde = { default-features = false, features = [ "derive" ], version = "1" }
serde_derive = { version = "1" }
serde_json = { default-features = false, version = "1" }
# error handling
anyhow = { default-features = false, version = "1" }
thiserror = { default-features = false, version = "2" }
# hashing
blake3 = { default-features = false, version = "1" }
digest = { default-features = false, version = "0.10" }
# math
approx = { version = "0.5" }
num = { default-features = false, version = "0.4" }
num-complex = { default-features = false, version = "0.4" }
num-traits = { default-features = false, version = "0.2" }
# randomization
getrandom = { default-features = false, version = "0.3" }
rand = { default-features = false, version = "0.9" }
rand_distr = { default-features = false, version = "0.5" }
uuid = { default-features = false, version = "1" }
# time
chrono = { default-features = false, version = "0.4" }
time = { default-features = false, version = "0.3" }
# macros
lazy_static = { version = "1" }
paste = { version = "1" }
smart-default = { version = "0.7" }
strum = { default-features = false, features = [ "derive" ], version = "0.27" }
# misc
glob = { default-features = false, version = "0.3" }
generic-array = { default-features = false, version = "1" }
typenum = { default-features = false, version = "1" }
url = { default-features = false, version = "2" }
# logging
tracing = { default-features = false, features = ["attributes"], version = "0.1" }
tracing-subscriber = { default-features = false, version = "0.3" }
# wasm
wasm-bindgen = { default-features = false, version = "0.2" }

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = "abort"
rpath = false
strip = "debuginfo"

[profile.release]
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
lto = false
opt-level = "z"
overflow-checks = false
panic = "abort"
rpath = false
strip = true
