[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "scsys-actors"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = [
    "std",
]

full = [
    "default",
    "serde",
    "tokio"
]

serde = [
    "dep:serde",
    "scsys-core/serde",
]

std = [
    "futures/std",
    "scsys-core/std",
    "serde/std",
    "strum/std",
]

tokio = [
    "dep:tokio",
    "tokio-ext",
]

tokio-ext = [
    "tokio/sync",
]

[lib]
bench = false
crate-type = ["cdylib", "rlib"]
doctest = true
test = true

[dependencies]
async-trait = "0.1"
futures = { default-features = false, features = [], version = "0.3"}
glob = "0.3"
paste.workspace = true
serde = { default-features = false, optional = true, features = ["derive"], version = "1" }
# serde_json = { optional = true, version = "1" }
smart-default.workspace = true
strum.workspace = true
tokio = { optional = true, version = "1" }

[dependencies.scsys-core]
default-features = false
path = "../core"
version = "0.2.2"
# version = "0.2.2-nightly"

[dev-dependencies]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
