[package]
authors.workspace = true
build = "build.rs"
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "scsys-actors"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = [
    "std",
]

full = [
    "default",
    "serde",
    "tokio"
]

# *** [FF] Dependencies ***

alloc = [
    "scsys-core/alloc",
    "serde?/alloc",
]

serde = [
    "dep:serde",
    "scsys-core/serde",
]

tokio = [
    "dep:tokio",
    "tokio-ext",
]

tokio-ext = [
    "tokio/sync",
]

# *** [FF] Environments ***

std = [
    "futures/std",
    "scsys-core/std",
    "serde?/std",
    "strum/std",
]

wasi = [
    "scsys-core/wasi",
]

wasm = [
    "scsys-core/wasm",
]

[lib]
bench = false
crate-type = ["cdylib", "rlib"]
doctest = true
test = true

[dependencies]
async-trait = "0.1"
glob = "0.3"
paste.workspace = true
smart-default.workspace = true
strum.workspace = true

[dependencies.futures]
default-features = false
version = "0.3"

[dependencies.scsys-core]
default-features = false
path = "../core"
version = "0.2.3"

[dependencies.serde]
default-features = false
features = ["derive"]
optional = true
version = "1"

[dependencies.tokio]
optional = true
version = "1"

[dev-dependencies]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
