[package]
build = "build.rs"
name = "scsys-actors"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
bench = false
crate-type = ["cdylib", "rlib", "staticlib"]
doctest = true
test = true

[features]
default = [
    "std",
]

full = [
    "default",
    "serde",
    "tokio"
]

# *** [FF] Dependencies ***

alloc = [
    "scsys-core/alloc",
    "serde?/alloc",
]

serde = [
    "dep:serde",
    "dep:serde_derive",
    "scsys-core/serde",
]

tokio = [
    "dep:tokio",
    "tokio?/sync",
]

# *** [FF] Environments ***

std = [
    "futures/std",
    "scsys-core/std",
    "serde?/std",
    "strum/std",
]

wasi = [
    "scsys-core/wasi",
]

wasm = [
    "scsys-core/wasm",
]

[dependencies]
# project
scsys-core = { workspace = true }
# shared
paste = { workspace = true }
serde = { optional = true, workspace = true }
serde_derive = { optional = true, workspace = true }
strum = { features = ["derive"], workspace = true }
# feature-specific
async-trait = "0.1"
glob = "0.3"
futures = { default-features = false, version = "0.3" }
tokio = { default-features = false, optional = true, version = "1" }

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
