[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)", "Scattered-Systems (https://github.com/scattered-systems)"]
categories = []
description = "scsys-agents"
edition = "2021"
homepage = "https://github.com/scattered-systems/scsys/wiki"
keywords = ["scsys"]
license = "MIT"
name = "scsys-agents"
readme = "README.md"
repository = "https://github.com/scattered-systems/scsys"
version = "0.1.27" # TODO: Update the package version

[features]
default = []

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[dependencies]
serde = { features = ["derive"], version = "1.0.147" }
serde_json = "1.0.87"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
