[package]
build = "build.rs"
description = "common configuration routines and schemas used throughout the ecosystem"
name = "scsys-config"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
bench = false
doc = true
doctest = true
test = true

[dependencies]
# sdk
scsys-core = { features = ["std"], workspace = true }
# crate-specific
clap = { default-features = false, features = ["derive"], optional = true, version = "4" }
config = { default-features = false, optional = true, version = "0.15" }
glob = { optional = true, workspace = true }
url = { features = ["std"], workspace = true }
# error handling
anyhow = { features = ["std"], workspace = true }
thiserror = { features = ["std"], workspace = true }
# data & serialization
serde = { features = ["derive", "std"], optional = true, workspace = true }
serde_derive = { optional = true, workspace = true }
serde_json = { features = ["std"], optional = true, workspace = true }
# macros
smart-default = { workspace = true }
strum = { features = ["derive", "std"], workspace = true }
# logging
tracing = { optional = true, workspace = true }
tracing-subscriber = { optional = true, workspace = true }
# files

[package.metadata.docs.rs]
all-features = false
features = ["full"]
rustc-args = [ "--cfg", "docsrs" ]
version = "v{{version}}"

[package.metadata.release]
no-dev-version = true
tag-name = "{{version}}"

[features]
default = [
    "config",
    "async",
    "convert-case",
    "ini",
    "json",
    "json5",
    "ron",
    "toml",
    "yaml",
]

full = [
    "default",
    "clap",
    "glob",
    "tracing",
    "tracing-subscriber",
]

# ************* [FF:Dependencies] *************
async = ["config?/async"]

clap = [
    "dep:clap",
    "clap?/derive",
]

config = ["dep:config"]

glob = ["dep:glob"]

serde = [
    "dep:serde",
    "dep:serde_derive",
    "scsys-core/serde",
    "tracing-subscriber?/serde",
    "url/serde",
]

serde_json = [
    "dep:serde_json", 
    "config?/serde_json",
    "scsys-core/json",
    "serde",
]

tracing = [
    "dep:tracing",
    "scsys-core/tracing",
]

tracing-subscriber = [
    "dep:tracing-subscriber",
    "tracing",
    "tracing-subscriber?/ansi",
    "tracing-subscriber?/env-filter",
    "tracing-subscriber?/fmt",
]

# ************* [FF:config] *************
convert-case = ["config?/convert-case"]

ini = ["config?/ini"]

json = [
    "serde_json",
    "config?/json",
]

json5 = [ "config?/json5" ]

ron = ["config?/ron"]

toml = ["config?/toml"]

yaml = ["config?/yaml"]

# ************* [Unit Tests] *************
[[test]]
name = "default"