[package]
build = "build.rs"
name = "scsys-core"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = false
features = ["full"]
rustc-args = [ "--cfg", "docsrs" ]
version = "v{{version}}"

[package.metadata.release]
no-dev-version = true
tag-name = "{{version}}"

[lib]
bench = false
crate-type = [ "cdylib", "rlib" ]
doctest = true
test = true

[dependencies]
glob = { workspace = true }
num = { workspace = true }
num-traits = { workspace = true }
# data & serialization
serde = { optional = true, workspace = true }
serde_derive = { optional = true, workspace = true }
serde_json = { optional = true, workspace = true }
# errors
anyhow = { optional = true, workspace = true }
thiserror = { workspace = true }
# randomization
getrandom = { optional = true, workspace = true }
rand = { optional = true, workspace = true }
rand_distr = { optional = true, workspace = true }
uuid = { optional = true, workspace = true }
# time
chrono = { optional = true, workspace = true }
time = { optional = true, workspace = true }
# macros
paste = { workspace = true }
smart-default = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
approx = { workspace = true }

[features]
default = [ "std" ]

full = [ 
    "default",
    "anyhow",
    "chrono",
    "json",
    "rand", 
    "serde", 
    "time" 
]

# ************* [FF:Environments] *************
std = [
    "alloc",
    "anyhow?/std",
    "num/std",
    "num-traits/std",
    "rand?/std",
    "rand?/std_rng",
    "serde?/std",
    "strum/std",
    "thiserror/std",
    "time?/std",
    "uuid?/std",
]

wasi = [  ]

wasm = [ 
    "chrono?/wasmbind",
    "getrandom?/wasm_js",
    "time?/wasm-bindgen",
    "uuid?/js",
]

# ************* [FF:Dependencies] *************
anyhow = [ "dep:anyhow" ]

alloc = [ 
    "chrono?/alloc",
    "num/alloc",
    "serde?/alloc",
    "serde_json?/alloc",
    "time?/alloc",
]

chrono = [ 
    "dep:chrono", 
    "chrono?/clock",
    "time",
]

json = [ 
    "dep:serde_json", 
    "alloc", 
    "serde"
]

rand = [
    "dep:rand",
    "dep:rand_distr",
    "num/rand",
    "rng",
]

rng = [
    "dep:getrandom",
    "rand?/small_rng",
    "rand?/thread_rng",
    "uuid?/rng",
    "uuid?/v4"
]

serde = [ 
    "dep:serde", 
    "dep:serde_derive", 
    "num/serde", 
    "rand?/serde", 
    "uuid?/serde" 
]

time = [ "dep:time" ]

uuid = [ 
    "dep:uuid", 
    "uuid?/v3" 
]

# ************* [Unit Tests] *************
[[test]]
name = "default"

[[test]]
name = "state"
required-features = [ "std" ]

[[test]]
name = "time"
required-features = [ "std", "time" ]